--- a/public/sass/modules/text_right.scss
+++ b/public/sass/modules/text_right.scss
@@ -51,15 +51,20 @@ sup {
 	flex-wrap: wrap;
 	width: 100%;
 	justify-content: space-evenly;
+	margin-left: 0px;
+	padding-left: 0px;
 }
 
 .text_right li {
 	border-radius: $borderRadius;
 	///border: 3px solid $grey;
 	padding: 10px 20px;
-	margin: 10px 20px;
+	margin: 5px 5px;
 	background-color: $lightGrey;
 	@include altProseStack();
+	@include breakpoint(condensed-screen) {
+		margin: 10px 20px;
+	}
 }
 
 .text_right figcaption {
